

                              Kiji Schema Release Notes

Version 1.1.0
  * SCHEMA-380. Version pagers may now be created on fully-qualified columns
      belonging to paging-enabled map-type families.
  * SCHEMA-355. KijiRowKeySplitter is parametrized by row key resolution.
  * SCHEMA-346. AtomicKijiPutter is no longer restricted to writing within a
      single locality group.  Calls to commit() no longer accept a locality group name.
  * SCHEMA-354. Change use of filters to comply with HBase 0.92 and 0.94 semantics.
    This provides experimental support for HBase 0.94, though this is not the
    default.  KijiSchema uses HBase filters to convert KijiDataRequests into the
    smallest possible HBase request. Where columns have a different maxVersions,
    columns with maxVersions not equal to 1 may communicate more values across
    the wire than are requested; the actual amount of data transferred may be as
    many as the largest maxVersions observed in the data request.  Previously
    (<= 0.92) all per-column maxVersions could be respected on the wire in
    addition to within KijiRowData.
  * SCHEMA-283. Add more table and and locality group properties to
      TableLayoutDesc. These properties control e.g. max HFile size and bloom
      filter usage. You must use layout version "layout-1.2.0" to expose
      these properties.
  * SCHEMA-339. JVM System property to configure KijiClientTest to use a
      real HBase instance.
  * SCHEMA-322. Restrict behavior of KijiPager on map-type families.
      Paging on a map-type family yields qualifiers only, no actual cell.
  * SCHEMA-323. Adds KijiTable.getReaderFactory() to provide custom readers.
  * SCHEMA-327. AvroCellEncoder uses the proper writer schema,
      instead of the reader schema.
  * SCHEMA-187. Allows decoding records with the writer schema when no
      specific record is available (ie. when there is no reader schema).
  * SCHEMA-324. bin/kiji supports loading Hadoop distro-specific dependencies